--- a/package.json
+++ b/package.json
@@ -3,10 +3,20 @@
   "version": "",
   "description": "",
   "author": "",
+  "type": "module",
   "scripts": {
-    "start": "node server.improved.js"
+    "clean": "npx rimraf ./dist/",
+    "build": "tsc -p tsconfig.server.json & tsc -p tsconfig.frontend.json & copyfiles --up 1 \"src/public/*.html\" \"src/public/css/**/*.*\" dist",
+    "start": "npm run build && node dist/server/main.js"
   },
   "dependencies": {
     "mime": "^2.4.4"
+  },
+  "devDependencies": {
+    "@types/material-components-web": "^1.0.0",
+    "@types/mime": "^2.0.3",
+    "@types/node": "^14.6.4",
+    "copyfiles": "^2.3.0",
+    "typescript": "^4.0.2"
   }
 }
