--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "clean": "npx rimraf ./dist/",
     "build": "tsc -p tsconfig.server.json & tsc -p tsconfig.frontend.json & copyfiles --up 1 \"src/public/*.html\" \"src/public/css/**/*.*\" dist",
-    "start": "npm run build && node dist/server/main.js"
+    "start": "npm run build && node --experimental-modules dist/server/main.js"
   },
   "dependencies": {
     "mime": "^2.4.4"
@@ -18,5 +18,8 @@
     "@types/node": "^14.6.4",
     "copyfiles": "^2.3.0",
     "typescript": "^4.0.2"
+  },
+  "engines" : { 
+    "node" : "v12.0.0"
   }
 }
