--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "",
-  "version": "",
+  "name": "simcar",
+  "version": "1.0.0",
   "description": "",
-  "author": "",
+  "author": "Robear Mankaryous",
   "scripts": {
     "start": "node server.improved.js"
   },
   "dependencies": {
+    "bulma": "^0.9.0",
     "mime": "^2.4.4"
   }
 }
