--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "",
-  "version": "",
-  "description": "",
-  "author": "",
+  "name": "a2-shortstack",
+  "version": "1.0.0",
+  "description": "Cat Battle",
+  "author": "Christian Tweed",
   "scripts": {
-    "start": "node server.improved.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "mime": "^2.4.4"
