--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "La Fleur by Pooja Patel",
-  "version": "V1.0",
-  "description": "Prototype of a flower shop website with the features to add, modify, or delete orders",
+  "name": "a2-poojapatel",
+  "version": "0.1.0",
+  "description": "Asignment 2",
   "author": "Pooja Patel",
   "scripts": {
     "start": "node server.improved.js"
