--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "node server.improved.js"
   },
   "dependencies": {
-    "mime": "^2.4.4"
+    "imdb-node-api": "^0.1.0",
+    "mime": "^2.4.4",
+    "omdb": "^0.8.0"
   }
 }
