Got some stuff done, gonna test on glitch

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "",
-  "version": "",
-  "description": "",
-  "author": "",
+  "name": "PartyGuestList",
+  "version": "1.0.0",
+  "description": "A guest list to determine who is in the building and what privileges they have",
+  "author": "Connor Burri",
   "scripts": {
     "start": "node server.improved.js"
   },
