--- a/package.json
+++ b/package.json
@@ -7,6 +7,14 @@
     "start": "node server.improved.js"
   },
   "dependencies": {
-    "mime": "^2.4.4"
+    "mime": "^2.4.4",
+    "tingodb": "0.6.1",
+    "node-sass": "4.14.1",
+    "persistent-cache": "1.1.1",
+    "folder-hash": "3.3.3",
+    "chokidar": "3.4.2",
+    "yup": "0.29.3",
+    "sanitizer": "0.1.3",
+    "tableify": "0.0.8"
   }
 }
