--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "",
-  "version": "",
-  "description": "",
-  "author": "",
+  "name": "rapper-name-generator",
+  "version": "1.0.0",
+  "description": "Takes input and returns rapper name",
+  "author": "Jenna Galli",
   "scripts": {
     "start": "node server.improved.js"
   },
   "dependencies": {
-    "mime": "^2.4.4"
+    "mime": "^2.4.6"
   }
 }
