--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "",
-  "version": "",
-  "description": "",
-  "author": "",
+  "name": "a2-shortstack",
+  "version": "1.0.0",
+  "description": "A book list records necessary book info. Supports add, delete, and edit.",
+  "author": "Xiaoyue Lyu",
   "scripts": {
     "start": "node server.improved.js",
     "dev": "nodemon server.improved.js"
