--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "",
-  "version": "",
-  "description": "",
-  "author": "",
+  "name": "jsong",
+  "version": "1.0.0",
+  "description": "Webware - Assignment 2",
+  "author": "Jialin Song",
   "scripts": {
     "start": "node server.improved.js"
   },
