🚝📅 Updated with Glitch

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "",
-  "version": "",
-  "description": "",
-  "author": "",
+  "name": "assignment_2",
+  "version": "V1.0",
+  "description": "This is an assignment for class Webware.",
+  "author": "Yaru Gong",
   "scripts": {
     "start": "node server.improved.js"
   },
