--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "a2-shortstack",
+  "name": "a2-tgrahamcodes",
   "version": "0.1.0",
   "description": "A website for tracking data.",
   "author": "Tom Graham",
