--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,1 @@
-{"tasks":[{"task":"your task here","expected":"number of hours","date":"2020-9-15","priority":"low"},{"task":"your task here","expected":"number of hours","date":"2020-9-15","priority":"low"},{"task":"your task here","expected":"19","date":"2020-9-15","priority":"high"}]}
+{"tasks":[{"task":"complete assigment #1","expected":"2","date":"2020-9-15","priority":"low"}]}
