fixed deleting items of the list

--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,1 @@
-{"tasks":[{"task":"complete assigment #1","expected":"2","date":"2020-9-15","priority":"low"}]}
+{"tasks":[{"task":"getting this thing done ","expected":"2","date":"2020-9-15","priority":"low"},{"task":"getting this thing done ","expected":"2","date":"2020-9-15","priority":"low"}]}
