--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,1 @@
-{"tasks":[{"task":"getting this thing done ","expected":"2","date":"2020-9-15","priority":"low"},{"task":"getting this thing done ","expected":"2","date":"2020-9-15","priority":"low"}]}
+{"tasks":[{"task":"homework #1","expected":"0.5","date":"2020-9-15","priority":"low"},{"task":"","expected":"","date":"2020-9-15","priority":"low"},{"task":"","expected":"","date":"2020-9-15","priority":"low"}]}
