--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,1 @@
-{"tasks":[{"task":"homework #1","expected":"0.5","date":"2020-9-15","priority":"low"},{"task":"","expected":"","date":"2020-9-15","priority":"low"},{"task":"","expected":"","date":"2020-9-15","priority":"low"}]}
+{"tasks":[{"task":"homework #1","expected":"0.5","date":"2020-9-15","priority":"low"}]}
