--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "",
-  "version": "",
-  "description": "",
-  "author": "",
+  "name": "a2-mattheusnascimento",
+  "version": "1.0",
+  "description": "A simple list of people's names and birth years which calculates their age and fills it in",
+  "author": "Mattheus Nascimento",
   "scripts": {
     "start": "node server.improved.js"
   },
