Everything is complete other than design

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "a2-jstoessel",
+  "name": "a2-jordanstoessel",
   "version": "1.0",
   "description": "The second assignment of my WebWare course that helps teach integrating HTML, CSS, JavaScript, and Node.js.",
   "author": "Jordan Stoessel",
