--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Reading List",
+  "name": "readinglist",
   "version": "1.0",
   "description": "Makes a book list with the reading times of all the books",
   "author": "Brittany Henriques",
