--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "",
   "version": "",
   "description": "",
-  "author": "",
+  "author": "Wenjing Ying",
   "scripts": {
     "start": "node server.improved.js"
   },
