--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "",
-  "version": "",
-  "description": "",
-  "author": "",
+  "name": "WPI Themed To Do List",
+  "version": "V0.1",
+  "description": "A task managment webpage that is WPI color theymed",
+  "author": "Charles Kittler",
   "scripts": {
     "start": "node server.improved.js"
   },
