--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "",
+  "name": "Inside My Refrigerator",
   "version": "",
-  "description": "",
-  "author": "",
+  "description": "a tool used to aid in keeping track of and storing food items in your refrigerator!",
+  "author": "Alexa Freglette",
   "scripts": {
     "start": "node server.improved.js"
   },
