--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "",
-  "version": "",
-  "description": "",
-  "author": "",
+  "name": "a2-shortstack",
+  "version": "1.0",
+  "description": "CS-4241 Assignment 2: Basic Two-tier Web Application using HTML/CSS/JS and Node.js",
+  "author": "Lindberg Simpson",
   "scripts": {
     "start": "node server.improved.js"
   },
