--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "",
-  "version": "",
-  "description": "",
-  "author": "",
+  "name": "MMO DPS Tracker",
+  "version": "1.0",
+  "description": "A simple web app for MMO players to track their DPS (damage per second)",
+  "author": "Alex Hunt",
   "scripts": {
     "start": "node server.improved.js"
   },
