--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "",
-  "version": "",
-  "description": "",
-  "author": "",
+  "name": "Billbo Swaggins' Car Dealership Inventory",
+  "version": "1.0.0",
+  "description": "Car dealership site",
+  "author": "William Yang",
   "scripts": {
     "start": "node server.improved.js"
   },
   "dependencies": {
-    "mime": "^2.4.4"
+    "mime": "^2.4.6"
   }
 }
