--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Billbo Swaggins' Car Dealership Inventory",
+  "name": "A2-ShortStack-WBY",
   "version": "1.0.0",
   "description": "Car dealership site",
   "author": "William Yang",
